Архитектура проекта изменена под паттерн MVVM

--- a/Study Planner.csproj
+++ b/Study Planner.csproj
@@ -63,6 +63,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Components\Command.cs" />
+    <Compile Include="Components\TaskViewModel.cs" />
     <Compile Include="Components\Task.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
